# anki-cards-generator

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  main_de.py  main_en.py  pyproject.toml  requirements.txt  server.py
src/: ai_interact.py  anki_card_style.py  anki_common.py  common_data_extract.py  configuration.py  english_anki_generate.py  english_data_extract.py  german_anki_generate.py  german_data_extract.py  llm_interact.py  prompts.py  spelling.py  translate.py  tts.py  utils.py
src/app/: common_data_extract.py  configuration.py  english_anki_generate.py  english_data_extract.py  german_anki_generate.py  german_data_extract.py  llm_interact.py  main.py  prompts.py  spelling.py  tts.py  utils.py  word_hints.py
src/app/templates/: index.html
static/: script.js
templates/: index.html
tests/: api_tests.py  frontrend_tests.py  stub_llm_provider.py  stub_translator.py  test_anki_export.py  test_api_endpoints.py  test_audio_file_name.py  test_german_shorten_plural_form.py  test_prepare_phrase_data_german.py  test_prepare_word_data_english.py  test_prepare_word_data_german.py  test_text_to_speech.py  test_unit.py  tests.py
website/: README.md  run.sh
website/src/: index.html  script.js  styles.css
