[project]
name = "anki-cards-generator"
version = "0.1.0"
requires-python = "==3.13.5"
dependencies = [
    "flask[async] (==3.1.1)",
    "genanki (==0.13.1)",
    "wiktionary-de-parser (==0.12.13)",
    "googletrans (==4.0.2)",
    "ollama (==0.5.3)",
    "openai (==1.99.5)",
    "python-dotenv (==1.1.1)",
    "gtts (==2.5.4)",
    "HanTa (==1.1.2)",
    "numpy (==2.3.2)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
mypy = "^1.17.1"
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
