[project]
name = "anki-cards-generator"
version = "0.1.0"
requires-python = ">=3.13,<3.15"
dependencies = [
    "flask[async] (==3.1.3)",
    "genanki (==0.13.1)",
    "wiktionary-de-parser (==0.12.13)",
    "googletrans (==4.0.2)",
    "ollama (==0.6.2)",
    "openai (==2.35.1)",
    "python-dotenv (==1.2.2)",
    "gtts (==2.5.4)",
    "HanTa (==1.2.1)",
    "numpy (==2.4.4)",
    "pyspellchecker (==0.8.4)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pre-commit = "==4.6.0"
mypy = "==2.0.0"
pytest = "==9.0.3"
pytest-asyncio = "==1.3.0"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
