[project]
name = "app"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "flask[async] (==3.1.3)",
    "genanki (==0.13.1)",
    "german-nouns (==1.2.5)",
    "googletrans (==4.0.2)",
    "ollama (==0.6.2)",
    "openai (==2.35.1)",
    "python-dotenv (==1.2.2)",
    "gtts (==2.5.4)",
    "HanTa (==1.2.1)",
    "numpy (==2.4.4)",
    "pyspellchecker (==0.8.4)",
]

[dependency-groups]
dev = [
    "pre-commit==4.6.0",
    "mypy==2.0.0",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
]

[tool.uv]
default-groups = "all"

[project.scripts]
app = "app:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
